File: plugins/nexus-onboarding-plugin/src/main/java/org/sonatype/nexus/onboarding/internal/OnboardingManagerImpl.java